# loveca-simulator

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  README.zh-CN.md  TODO.md  compose.api.yml  pyproject.toml
data/: loveca-db-manifest.json
data_sources/: card-entity-normalization.json  effect-execution-source-review.md  effect-registry.v0.json  mvp-rule-subset-review.md  official-rules-review.md  official-sources.md  source-manifest.yaml  source-review-status.md  terminology-review.md
docs/: 00-project-vision.md  01-source-policy.md  02-domain-glossary.md  03-data-model-notes.md  04-rule-model-notes.md  05-development-roadmap.md  06-architecture-overview.md  07-roadmap-expanded.md  08-ai-and-simulation-notes.md  09-replay-and-online-readiness.md  10-effect-modeling-and-taxonomy.md  11-core-spec-consistency-review.md  12-card-data-erd.md  13-effect-semantics-audit.md  14-database-migration-and-update-guide.md  15-project-guidance.md  16-low-cost-online-battle-plan.md  17-browser-only-preview-and-pages-release.md  18-hosted-online-smoke-checklist.md
raw_doc/: カードの使用制限に関するルール 「ラブカポイントシステム」について _ ラブライブ！シリーズ　オフィシャルカードゲーム 公式サイト.html
scripts/: card-db-manifest.py  export-preview-data.py  pre-push-check.ps1  run-web-local.ps1
specs/: 000-card-database.spec.md  001-deck-analyzer.spec.md  002-rule-engine.spec.md  003-gamestate-and-actions.spec.md  005-action-system.spec.md  007-effect-dsl.spec.md  008-randomness-and-replay.spec.md  010-simple-ai.spec.md  011-simulator-mvp.spec.md  012-controller-and-legal-actions.spec.md  014-data-importer.spec.md  (+8 more)
(+160 files in other folders)
